<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fitem_detail"
    style="?android:attr/textAppearanceLarge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFC107"
            android:focusable="auto"
            android:hapticFeedbackEnabled="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <include
                layout="@layout/icon_list"
                android:background="#D8572F" />
        </FrameLayout>

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ellipsize="end"
            android:ems="10"
            android:hint="@string/enter_transaction_name"
            android:inputType="textLongMessage|text"
            android:selectAllOnFocus="true"
            android:singleLine="true" />

        <EditText
            android:id="@+id/editTextNumberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ellipsize="end"
            android:ems="10"
            android:hint="@string/enter_amount"
            android:inputType="numberSigned|number|numberDecimal"
            android:singleLine="true"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/item_detail_multitext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:focusable="auto"
            android:gravity="top"
            android:hint="@string/add_transaction_details_here"
            android:inputType="textLongMessage|textMultiLine|textCapSentences|textAutoComplete"
            android:scrollbars="vertical" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>