<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/vis_switch_rela_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/vis_switch_compat"
        style="@style/SwitchCompactStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:width="48dp"
        android:height="48dp"
        android:checked="true"
        android:clickable="false"
        android:text=""
        app:thumbTint="#777373"
        app:trackTint="@color/switch_color_selector" />
</RelativeLayout>
