<resources>
    <string name="app_name">Encrypt SMS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Encrypt SMS</string>
    <string name="nav_header_subtitle">Settings</string>
    <string name="nav_header_desc">Text Nav</string>
    <string name="action_home">Home</string>

    <string name="menu_conversation">Conversation</string>
    <string name="menu_threads">Inbox</string>
    <string name="menu_nav_about">About</string>
...
    <string name="app_bar_invite">Invite</string>
    <string name="concer_fragment_delivered">Delivered</string>
    <string name="conver_fragment_delivery_error">Delivery Error</string>

    <!-- Tag ids -->
    <item name="message" type="id"/>
    <item name="title" type="id"/>
</resources>
